# BuyMeACoffe

./: CMakeLists.txt  README.md  buymeacoffe.cpp
include/: client.hpp  model.hpp  monitor.hpp
qml/: Message_delegate.qml  Message_list.qml  window.qml
src/: client.cpp  model.cpp  monitor.cpp
wasm/: AfterInitFunctions.js  afterbody.html  buymeacoffe.js  index.html  prism.css  prism.js  qtloader.js  style.css
wasm/js/: cascade.js  scripts.js
wasm/wasm/: index.html
